--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "audit-n-go",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://audit-n-go-backend.herokuapp.com",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@date-io/date-fns": "^1.3.13",
@@ -23,12 +22,14 @@
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.0.0-beta.5",
+    "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "fontsource-roboto": "^4.0.0",
     "fs": "0.0.1-security",
     "grommet": "^2.16.3",
     "grommet-icons": "^4.5.0",
     "html2canvas": "^1.0.0-rc.7",
+    "http-proxy-middleware": "^1.1.1",
     "jest": "^26.6.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^5.0.0",
