--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "audit-n-go",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@date-io/date-fns": "^1.3.13",
