--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-scripts": "4.0.3",
     "react-select-search": "^3.0.5",
     "react-simple-captcha": "^6.1.6",
+    "react-simple-chatbot": "^0.6.1",
     "react-simple-flex-grid": "^1.3.21",
     "react-swipeable-views": "^0.13.9",
     "react-toastify": "^7.0.3",
